--- a/public/index.html
+++ b/public/index.html
@@ -2533,7 +2533,7 @@
       
       <li>
         <i class="fa-li fas fa-compass fa-2x" aria-hidden="true"></i>
-        <span>Enter the building through the red door and press the buzzer</span>
+        <span>Enter the building through the red door and press the button</span>
       </li>
       
 
