Change to office hours

--- a/public/index.html
+++ b/public/index.html
@@ -2540,7 +2540,7 @@
       
       <li>
         <i class="fa-li fas fa-clock fa-2x" aria-hidden="true"></i>
-        <span>Wednesday 9:00 to 17:00</span>
+        <span>Wednesday 9:00 to 5:00<br>Thursday 9:00 to 5:00<br>Friday 9:00 to 5:00</span>
       </li>
       
 
