Added more links

--- a/public/index.html
+++ b/public/index.html
@@ -2888,7 +2888,7 @@
 <div class="row">
   
     <div class="col-12 col-lg-4 section-heading">
-      <h1>Links</h1>
+      <h1>Useful R programming links</h1>
       
     </div>
     <div class="col-12 col-lg-8">
@@ -2896,7 +2896,19 @@
 
 <h3 id="r-bloggers-https-www-r-bloggers-com"><a href="https://www.r-bloggers.com/" target="_blank">R-Bloggers</a></h3>
 
-<p>R news and tutorials contributed by (750) R bloggers</p>
+<p>R news and tutorials contributed by R bloggers</p>
+
+<h3 id="r-weekly-https-rweekly-org"><a href="https://rweekly.org" target="_blank">R Weekly</a></h3>
+
+<p>Weekly Updates from the Entire R Community</p>
+
+<h3 id="sthda-http-www-sthda-com-english"><a href="http://www.sthda.com/english/" target="_blank">STHDA</a></h3>
+
+<p>Statistical tools for high-throughput data analysis</p>
+
+<h3 id="simply-statistics-https-simplystatistics-org"><a href="https://simplystatistics.org" target="_blank">Simply Statistics</a></h3>
+
+<p>A statistics blog by Rafa Irizarry, Roger Peng, and Jeff Leek</p>
 
     </div>
   
