--- a/public/publication_types/2/index.html
+++ b/public/publication_types/2/index.html
@@ -413,14 +413,14 @@
   
   
   <div>
-    <h2><a href="../../publication/2018-01-01_forgetting_fam/">&#34;Forgetting Familiar Faces&#34;: Staff Perceptions of Dementia in People with Intellectual Disabilities</a></h2>
+    <h2><a href="../../publication/2018-01-01_a_review_of_we/">A Review of Wearable Solutions for Physiological and Emotional Monitoring for Use by People with Autism Spectrum Disorder and Their Caregivers</a></h2>
     <div class="article-style">
       
     </div>
   </div>
   
   <div>
-    <h2><a href="../../publication/2018-01-01_a_review_of_we/">A Review of Wearable Solutions for Physiological and Emotional Monitoring for Use by People with Autism Spectrum Disorder and Their Caregivers</a></h2>
+    <h2><a href="../../publication/2018-01-01_forgetting_fam/">Forgetting Familiar Faces: Staff Perceptions of Dementia in People with Intellectual Disabilities</a></h2>
     <div class="article-style">
       
     </div>
