--- a/public/publication/2007-01-01_british_outpatient_n/index.html
+++ b/public/publication/2007-01-01_british_outpatient_n/index.html
@@ -83,7 +83,7 @@
   
   
   
-  <link rel="stylesheet" href="../../css/academic.min.e8d4d5fd376e67b34452ebe1cae16341.css">
+  <link rel="stylesheet" href="../../css/academic.min.71e2b6a21d750b37706cf3fc4e1f4666.css">
 
   
 
@@ -583,7 +583,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9">Psychology and Psychotherapy: Theory, Research and Practice, (80), <em>pp. 183-191</em>, <a href="https://doi.org/10.1348/147608306X111165" target="_blank">https://doi.org/10.1348/147608306X111165</a></div>
+          <div class="col-12 col-md-9">Psychology and Psychotherapy: Theory, Research and Practice, (80), <em>pp. 183-191</em>, <a href="https://doi.org/10.1348/147608306X111165">https://doi.org/10.1348/147608306X111165</a></div>
         </div>
       </div>
       <div class="col-md-1"></div>
