--- a/public/publication/2016-01-01_brief_report_s/index.html
+++ b/public/publication/2016-01-01_brief_report_s/index.html
@@ -83,7 +83,7 @@
   
   
   
-  <link rel="stylesheet" href="../../css/academic.min.e8d4d5fd376e67b34452ebe1cae16341.css">
+  <link rel="stylesheet" href="../../css/academic.min.71e2b6a21d750b37706cf3fc4e1f4666.css">
 
   
 
@@ -583,7 +583,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9">Journal of Autism and Developmental Disorders, (46), <em>pp. 3838-3843</em>, <a href="https://doi.org/10.1007/s10803-016-2927-x" target="_blank">https://doi.org/10.1007/s10803-016-2927-x</a></div>
+          <div class="col-12 col-md-9">Journal of Autism and Developmental Disorders, (46), <em>pp. 3838-3843</em>, <a href="https://doi.org/10.1007/s10803-016-2927-x">https://doi.org/10.1007/s10803-016-2927-x</a></div>
         </div>
       </div>
       <div class="col-md-1"></div>
