--- a/public/publication/2018-01-01_a_review_of_we/index.html
+++ b/public/publication/2018-01-01_a_review_of_we/index.html
@@ -83,7 +83,7 @@
   
   
   
-  <link rel="stylesheet" href="../../css/academic.min.e8d4d5fd376e67b34452ebe1cae16341.css">
+  <link rel="stylesheet" href="../../css/academic.min.71e2b6a21d750b37706cf3fc4e1f4666.css">
 
   
 
@@ -583,7 +583,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9">Sensors, (18), <em>pp. 4271</em>, <a href="https://doi.org/10.3390/s18124271" target="_blank">https://doi.org/10.3390/s18124271</a></div>
+          <div class="col-12 col-md-9">Sensors, (18), <em>pp. 4271</em>, <a href="https://doi.org/10.3390/s18124271">https://doi.org/10.3390/s18124271</a></div>
         </div>
       </div>
       <div class="col-md-1"></div>
