--- a/public/manipulating-text-data-from-dreams/index.html
+++ b/public/manipulating-text-data-from-dreams/index.html
@@ -564,16 +564,16 @@ df$sample &lt;- as.factor(df$sample)</code></pre>
 car::some(df) %&gt;%
   custom_view()</code></pre>
 <pre><code>##           sample                                                    dream
-## 1  college_women I cannot remember the details of the dream except that m
-## 2    vietnam_vet I&#39;m the teenage friend of a short scrawny black youth. W
-## 3    vietnam_vet It&#39;s night. I&#39;m in an Asian or Central American country 
-## 4      hall_male I was on a highway in a car and was being chased by some
-## 5      hall_male In this dream my wife and I were driving along a country
-## 6      hall_male A group of fellows and I were on our way to a baseball g
-## 7      hall_male I was playing catch with Al (my frat brother) on a paved
-## 8    hall_female I dreamed that I was sitting in the back room of Moe&#39;s, 
-## 9    hall_female I was in the basement of a house which was filled with w
-## 10   hall_female I was swimming at a lake with some boy around 27 years o</code></pre>
+## 1  college_women I was sitting in the bathtub in the dormitory. A girl fr
+## 2    vietnam_vet It&#39;s dark and raining. I&#39;m flying through an area simila
+## 3    vietnam_vet I&#39;m one of several passengers in a small plane flying hi
+## 4    vietnam_vet I&#39;ve met a woman. At the M&#39;s house, after dinner we plan
+## 5    vietnam_vet With two homeless women I share a below street level spa
+## 6    vietnam_vet At night, as people leave, I&#39;m standing in a field, a pa
+## 7      hall_male I don&#39;t remember where I was, except that I must have be
+## 8      hall_male I was walking across the street and a car hit me althoug
+## 9      hall_male I dreamed once again that I was driving my wife&#39;s automo
+## 10   hall_female My father and mother had become parents of a baby boy. I</code></pre>
 <p><img src="../img/tidytext.png" width="25%" /></p>
 <p>Julia Silge and David Robinson’s book <strong>Text Mining with R - A tidy approach</strong> sets off at a cracking pace, at least for relatively newbies to R such as myself. They assumes a degree of familiarity with tidyverse concepts and when they introduce concepts such as tidytext format, they can sometimes address three or four steps in one example. I will unpack some of these as individual steps to illustrate what is going on, while using our dream data as the material for processing.</p>
 <p>At the moment our df only contains the sample name (a categorical variable with four values) and the text of the dream. It might be helpful to index the dreams before we tokenise the text in them. So let’s introduce a new variable that we will call dream_number. This will index each dream between 1 - 400 in the dataframe.</p>
