--- a/public/2020-01-27-using-tidytext-to-compare-samples-of-dreams/index.html
+++ b/public/2020-01-27-using-tidytext-to-compare-samples-of-dreams/index.html
@@ -571,18 +571,18 @@ library(car)</code></pre>
   filter(!is.na(college_women) &amp; !is.na(hall_female) &amp; !is.na(hall_male) &amp; !is.na(vietnam_vet)) %&gt;%
   some()</code></pre>
 <pre><code>## # A tibble: 10 x 5
-##    word    college_women hall_female hall_male vietnam_vet
-##    &lt;chr&gt;           &lt;dbl&gt;       &lt;dbl&gt;     &lt;dbl&gt;       &lt;dbl&gt;
-##  1 answer           0.12        0.07      0.12        0.05
-##  2 bare             0.06        0.05      0.05        0.06
-##  3 caught           0.03        0.07      0.09        0.09
-##  4 crowd            0.06        0.1       0.09        0.03
-##  5 dance            0.09        0.12      0.05        0.03
-##  6 hair             0.49        0.2       0.05        0.38
-##  7 kitchen          0.03        0.07      0.05        0.02
-##  8 lawn             0.06        0.02      0.02        0.05
-##  9 strange          0.03        0.02      0.12        0.02
-## 10 woman            0.27        0.32      0.16        1.01</code></pre>
+##    word      college_women hall_female hall_male vietnam_vet
+##    &lt;chr&gt;             &lt;dbl&gt;       &lt;dbl&gt;     &lt;dbl&gt;       &lt;dbl&gt;
+##  1 desk               0.03        0.07      0.07        0.06
+##  2 doors              0.09        0.05      0.02        0.08
+##  3 dress              0.15        0.1       0.07        0.03
+##  4 driver             0.03        0.05      0.05        0.13
+##  5 entered            0.03        0.1       0.16        0.02
+##  6 expected           0.03        0.02      0.02        0.03
+##  7 fashioned          0.06        0.05      0.02        0.02
+##  8 friend             0.85        0.52      0.65        0.38
+##  9 lost               0.03        0.07      0.07        0.05
+## 10 walking            0.49        0.2       0.37        0.27</code></pre>
 <p>Then the next step is to decide which sample is going to be our reference sample. This will have its column of frequencies replicated and stacked so that each of the other samples can be compared with it. When we <em>gather()</em>, we only include the samples to compare with the reference and not the reference itself. For simplicity, we can use the first column in our df (college_women) as our reference group and compare the other three samples to this. We might predict at this point that the hall_women will have the most similar dreams and then the hall_men, with the vietnam_vet being the most different. We can check this prediction later on when we run some correlation coefficients.</p>
 <pre class="r"><code>df_gather &lt;- df_spread %&gt;%
   gather(sample, proportion, hall_female:vietnam_vet)</code></pre>
