--- a/public/index.html
+++ b/public/index.html
@@ -132,7 +132,7 @@
 
 
   
-  <link rel="alternate" href="./feed.xml" type="application/rss+xml" title="Christian Ryan">
+  <link rel="alternate" href="./index.xml" type="application/rss+xml" title="Christian Ryan">
   
 
   <link rel="manifest" href="./index.webmanifest">
@@ -3221,7 +3221,7 @@
   
 
   <p class="powered-by">
-    
+    © Christian Ryan 2020 &middot; 
 
     Powered by the
     <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
