--- a/public/publication_types/2/index.html
+++ b/public/publication_types/2/index.html
@@ -132,7 +132,7 @@
 
 
   
-  <link rel="alternate" href="../../publication_types/2/feed.xml" type="application/rss+xml" title="Christian Ryan">
+  <link rel="alternate" href="../../publication_types/2/index.xml" type="application/rss+xml" title="Christian Ryan">
   
 
   <link rel="manifest" href="../../index.webmanifest">
@@ -625,7 +625,7 @@
   
 
   <p class="powered-by">
-    
+    © Christian Ryan 2020 &middot; 
 
     Powered by the
     <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
