--- a/public/index.html
+++ b/public/index.html
@@ -132,7 +132,7 @@
 
 
   
-  <link rel="alternate" href="/feed.xml" type="application/rss+xml" title="Christian Ryan">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Christian Ryan">
   
 
   <link rel="manifest" href="/index.webmanifest">
