--- a/public/404.html
+++ b/public/404.html
@@ -267,7 +267,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="./posts/"><span>Posts</span></a>
+          <a class="nav-link " href="./drchristianryan.com/posts/"><span>Posts</span></a>
         </li>
 
         
