--- a/public/terms/index.html
+++ b/public/terms/index.html
@@ -279,7 +279,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="../#posts/"><span>Posts</span></a>
+          <a class="nav-link " href="../#posts"><span>Posts</span></a>
         </li>
 
         
