--- a/public/index.html
+++ b/public/index.html
@@ -1677,7 +1677,7 @@
 
 
   
-  <span><a href="./authors/mohammed-taj-eldin/">Mohammed Taj-Eldin</a></span>, <span><a href="./authors/christian-ryan/">Christian Ryan</a></span>, <span><a href="./authors/brendan-oflynn/">Brendan O&rsquo;Flynn</a></span>, <span><a href="./authors/paul-galvin/">Paul Galvin</a></span>
+  <span>Mohammed Taj-Eldin</span>, <span>Christian Ryan</span>, <span>Brendan O&rsquo;Flynn</span>, <span>Paul Galvin</span>
 
   </div>
   
@@ -1803,7 +1803,7 @@
 
 
   
-  <span><a href="./authors/christian-ryan/">Christian Ryan</a></span>, <span><a href="./authors/rosemary-machale/">Rosemary MacHale</a></span>, <span><a href="./authors/emma-hickey/">Emma Hickey</a></span>
+  <span>Christian Ryan</span>, <span>Rosemary MacHale</span>, <span>Emma Hickey</span>
 
   </div>
   
@@ -1929,7 +1929,7 @@
 
 
   
-  <span><a href="./authors/christian-ryan/">Christian Ryan</a></span>, <span><a href="./authors/elizabeth-quinlan/">Elizabeth Quinlan</a></span>
+  <span>Christian Ryan</span>, <span>Elizabeth Quinlan</span>
 
   </div>
   
@@ -2055,7 +2055,7 @@
 
 
   
-  <span><a href="./authors/christian-ryan/">Christian Ryan</a></span>, <span><a href="./authors/shona-oconnor/">Shona O&rsquo;Connor</a></span>
+  <span>Christian Ryan</span>, <span>Shona O&rsquo;Connor</span>
 
   </div>
   
@@ -2181,7 +2181,7 @@
 
 
   
-  <span><a href="./authors/christian-ryan/">Christian Ryan</a></span>, <span><a href="./authors/philip-furley/">Philip Furley</a></span>, <span><a href="./authors/kathleen-mulhall/">Kathleen Mulhall</a></span>
+  <span>Christian Ryan</span>, <span>Philip Furley</span>, <span>Kathleen Mulhall</span>
 
   </div>
   
@@ -2307,7 +2307,7 @@
 
 
   
-  <span><a href="./authors/christian-ryan/">Christian Ryan</a></span>, <span><a href="./authors/martina-stafford/">Martina Stafford</a></span>, <span><a href="./authors/robert-james-king/">Robert James King</a></span>
+  <span>Christian Ryan</span>, <span>Martina Stafford</span>, <span>Robert James King</span>
 
   </div>
   
@@ -2433,7 +2433,7 @@
 
 
   
-  <span><a href="./authors/christian-ryan/">Christian Ryan</a></span>, <span><a href="./authors/caitriona-ni-charragain/">Caitriona Ni Charragain</a></span>
+  <span>Christian Ryan</span>, <span>Caitriona Ni Charragain</span>
 
   </div>
   
@@ -2559,7 +2559,7 @@
 
 
   
-  <span><a href="./authors/christian-ryan/">Christian Ryan</a></span>
+  <span>Christian Ryan</span>
 
   </div>
   
@@ -2685,7 +2685,7 @@
 
 
   
-  <span><a href="./authors/christian-ryan/">Christian Ryan</a></span>
+  <span>Christian Ryan</span>
 
   </div>
   
