[outputFormats.RSS]   mediatype = "application/rss"   baseName = "feed"
This produces the feed.xml

--- a/public/publication/index.html
+++ b/public/publication/index.html
@@ -132,7 +132,7 @@
 
 
   
-  <link rel="alternate" href="/publication/index.xml" type="application/rss+xml" title="">
+  <link rel="alternate" href="/publication/feed.xml" type="application/rss+xml" title="">
   
 
   <link rel="manifest" href="/index.webmanifest">
