--- a/public/ua-149160448-2/index.html
+++ b/public/ua-149160448-2/index.html
@@ -132,7 +132,7 @@
 
 
   
-  <link rel="alternate" href="/ua-149160448-2/index.xml" type="application/rss+xml" title="">
+  <link rel="alternate" href="/ua-149160448-2/feed.xml" type="application/rss+xml" title="">
   
 
   <link rel="manifest" href="/index.webmanifest">
