--- a/public/publication_types/index.html
+++ b/public/publication_types/index.html
@@ -132,7 +132,7 @@
 
 
   
-  <link rel="alternate" href="/publication_types/index.xml" type="application/rss+xml" title="">
+  <link rel="alternate" href="/publication_types/feed.xml" type="application/rss+xml" title="">
   
 
   <link rel="manifest" href="/index.webmanifest">
